--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <h4 class="sub-heading">
                     <h1>A Software Engineer with a passion for AI and Data Science</h1>
                 </h4>
-                <img src="D:/Portfolio/python-for-ai.png" alt="About Image" height="600" width="1400">
+                <img src="D:\Portfolio\python-for-ai.png" alt="About Image" height="600" width="1400">
                 
         
             </div>
